--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
+    "axios-mock-adapter": "1.16.0",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.5",
     "enzyme": "3.9.0",
@@ -31,11 +32,15 @@
     "node": "10"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "leaflet": "1.5.1",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.3",
-    "redux": "4.0.1"
+    "recompose": "0.30.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "reselect": "^4.0.0"
   }
 }
